# CircuitNet

./: pyproject.toml  train_vit_irdrop.py
routability_ir_drop_prediction/models/: __init__.py  vit_rope_irdrop.py
