[project]
name = "circuitnet-vit"
version = "0.1.0"
description = "ViT-RoPE + FA3 for IR Drop Prediction on CircuitNet"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "scikit-image>=0.20",
    "opencv-python>=4.8",
    "tqdm>=4.65",
    "pillow>=9.4",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "kernels",
]

[project.optional-dependencies]
baseline = [
    "mmcv>=1.6,<2.0",
    "addict>=2.4",
]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 120
